# pankb-mcp

./: .gitignore  README.md  client.Dockerfile  docker-compose.yaml  server.Dockerfile
.github/workflows/: deploy-prod-to-azurevm.yaml
ai_client/: pyproject.toml
ai_client/app/: app.py  mcp_client.py  mcp_client_langchain.py
mcp_server/: pyproject.toml
mcp_server/app/: config.py  main.py
mcp_server/app/prompts/: templates.py
mcp_server/app/resources/: data.py
mcp_server/app/tools/: analysis.py  azure_blob.py  chart.py  query.py  rag.py
mcp_server/app/utils/: connections.py  data_processor.py
sqldb/: docker-compose.yaml
sqldb/docker-entrypoint-initdb.d/: init.sh
